fix(fe-carousel): overflow issue

--- a/client/src/styles/app/unauth/home.scss
+++ b/client/src/styles/app/unauth/home.scss
@@ -1,4 +1,6 @@
 .home-main {
+    max-width: 100%;
+    overflow: hidden;
   small {
     font-size: 18px;
     font-weight: 300;
